# cdnup

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  create-db.sh
migrations/: 20200824123220_initial.sql
src/: auth.rs  main.rs
