[package]
name = "cdnup"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3", default-features = false, features = ["rustls"] }
env_logger = "0.8"
bb8-postgres = "0.5"
actix-service = "1.0"
lazy_static = "1.4"
futures = { version = "0.3", default-features = false }
tokio = { version = "0.2", default-features = false, features = ["fs"] }
uuid = { version = "0.8", features = ["v4"] }
