[package]
name = "cdnup"
version = "0.1.0"
authors = ["Jens Reidel <jens@troet.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.0-beta.3", default-features = false, features = ["rustls"] }
env_logger = { version = "0.8", default-features = false, features = ["termcolor", "atty", "humantime"] }
bb8-postgres = "0.7"
actix-service = "2.0.0-beta.4"
lazy_static = "1.4"
futures = { version = "0.3", default-features = false }
tokio = { version = "1.0", default-features = false, features = ["fs"] }
uuid = { version = "0.8", features = ["v4"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
